--- a/index.css
+++ b/index.css
@@ -143,15 +143,15 @@ nav {
 
 @media screen and (max-device-width: 500px) {
     .section-head {
-        font-size: 75pt;
+        font-size: 30pt;
     }
 
     p {
-        font-size: 25pt;
+        font-size: 10pt;
     }
 
     h2 {
-        font-size: 40pt;
+        font-size: 15pt;
     }
 
     :placeholder-shown {
@@ -164,9 +164,9 @@ nav {
     }
     
     .hamburger-icon {
-        width: 50px;
-        height: 50px;
-        font-size: 50pt;
+        width: 40px;
+        height: 40px;
+        font-size: 40pt;
     }
     
     .nav-wrap {
@@ -176,12 +176,12 @@ nav {
     }
     
     .nav-button {
-        font-size: 40pt;
-        margin: 40px;
+        font-size: 25pt;
+        margin: 25px;
     }
 
     .visible {
-        height: 620px;
+        height: 400px;
     }
 }
 
